[gd_scene load_steps=4 format=3 uid="uid://c8p61btekgxu8"]

[ext_resource type="Script" path="res://Scripts/boss1.gd" id="1_2qwc4"]
[ext_resource type="Texture2D" uid="uid://jtbi8rwvvkjy" path="res://Assets/eggs benedict_main.png" id="1_ut8p0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7olb3"]
radius = 212.038

[node name="Boss1" type="Area2D"]
scale = Vector2(-0.6, 0.6)
script = ExtResource("1_2qwc4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("1_ut8p0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-48, 8)
shape = SubResource("CircleShape2D_7olb3")

[node name="AttackDurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
